[ESME-112] Fix wrapping in the timeline in CSS3-enabled browsers using word-wrap:break-word property
git-svn-id: https://svn.apache.org/repos/asf/incubator/esme/trunk/server@930119 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -367,7 +367,8 @@ ul.main-links  {
 .update {
 	float:left;
 	width:420px;
-	padding:0 10px;
+	padding:0 10px; 
+	word-wrap:break-word;
 }
 .update2 {
 	float:left;
